# DPRM-DLLM

./: .gitignore  CITATION.cff  NOTICE  README.md  pyproject.toml
docs/: MECHANISM_CONTROLS.md  RELEASE_CHECKLIST.md  THIRD_PARTY.md
examples/: build_bucket_table_from_traces.py  minimal_usage.py
integrations/: README.md
integrations/dcm/: README.md
integrations/dmpo/: README.md
integrations/dplm/: README.md
integrations/genmol/: README.md
integrations/llada_v/: README.md
integrations/mapdiff/: README.md
integrations/omni_diffusion/: README.md
integrations/prism/: README.md
integrations/puma/: README.md
integrations/sdpo/: README.md
prompts/: CLAUDE_INTEGRATION_PROMPT.md  CODEX_INTEGRATION_PROMPT.md
src/dprm/: __init__.py  contracts.py  controller.py  tables.py
statistics_outputs/: README.md  boundary_result_summaries.csv  dmpo_summary.csv  dplm_cogen_summary.csv  dplm_forward_summary.csv  mechanism_controls.csv  multimodal_order_results.csv  prism_summary.csv  puma_summary.csv
statistics_outputs/dcm/: dcm_dentate_latex_table.tex  dcm_dentate_paired_deltas.csv
statistics_outputs/genmol/: comparison_report.md  denovo_bootstrap_summary.csv
statistics_outputs/latest/: co_generation_deltas.csv  co_generation_lengthwise_summary.csv  co_generation_overall_summary.csv  dcm_dentate_metrics.csv  dplm2_order_ablation_report.md  forward_folding_deltas.csv  forward_folding_summary.csv  genmol_fragment_bootstrap_summary.csv  puma_1530k_tinygsm_comparison_results.json
statistics_outputs/mapdiff/: mapdiff_ordering_summary.csv  (+1 more)
(+66 files in other folders)
